<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="crop__done">DONE</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="SplashImage">SplashImage</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="accepted">已接受</string>
    <string name="account_balance">"余额(元)
%.2f"</string>
    <string name="account_login">登录</string>
    <string name="account_register">注册</string>
    <string name="account_score">"福分
%d"</string>
    <string name="account_to_charge">去充值</string>
    <string name="account_welcome">欢迎来到1元云购</string>
    <string name="action_settings">Settings</string>
    <string name="active_agree_friend">您已添加 %1$s ,可以开始聊天啦</string>
    <string name="add">添加</string>
    <string name="add_blacklist_fail">加入黑名单失败</string>
    <string name="add_blacklist_success">加入黑名单成功</string>
    <string name="add_failed">添加失败</string>
    <string name="add_friend">添加</string>
    <string name="add_friend_detail">添加好友</string>
    <string name="add_mobile_contacts">添加手机联系人</string>
    <string name="add_new_group">添加新的分组</string>
    <string name="add_qq_friend">邀请QQ好友</string>
    <string name="add_recommend_friend">推荐好友</string>
    <string name="add_success">成功加入购物车</string>
    <string name="add_to_new_group">添加到新的分组</string>
    <string name="add_wechat_friend">邀请微信好友</string>
    <string name="addfriends">添加好友</string>
    <string name="address_add">添加</string>
    <string name="address_add_new">填写收货地址</string>
    <string name="address_default_cannot_delete">默认地址不可删除</string>
    <string name="address_edit">编辑收货地址</string>
    <string name="address_edit_addr">详细地址</string>
    <string name="address_edit_addr_format_error">详细地址为3–30个字符，不包含特殊符号</string>
    <string name="address_edit_addr_hint">3–30个字符，不包含特殊符号</string>
    <string name="address_edit_addr_less_than_limited">详细地址长度少于3个字符</string>
    <string name="address_edit_addr_more_than_limited">详细地址长度已超过30个字符</string>
    <string name="address_edit_addr_null_tips">请填写详细地址</string>
    <string name="address_edit_area">所在地区</string>
    <string name="address_edit_area_hint">请选择所在的地区</string>
    <string name="address_edit_delete_this">删除该地址</string>
    <string name="address_edit_is_default">设为默认地址</string>
    <string name="address_edit_phone">手 机 号</string>
    <string name="address_edit_phone_hint">请填写正确的手机号码</string>
    <string name="address_edit_receiptor">收 货 人</string>
    <string name="address_edit_receiptor_hint">请填写真实姓名，否则将无法进行配送</string>
    <string name="address_edit_save">保存</string>
    <string name="address_edit_select_city">请选择城市</string>
    <string name="address_edit_select_district">请选择地区</string>
    <string name="address_edit_select_province">请选择省份</string>
    <string name="address_edit_select_street">请选择所在街道</string>
    <string name="address_edit_street">所在街道</string>
    <string name="address_edit_street_hint">请选择所在的街道</string>
    <string name="address_edit_zip">邮    编</string>
    <string name="address_edit_zip_error">邮编格式错误</string>
    <string name="address_edit_zip_hint">(选填)</string>
    <string name="address_manager">地址管理</string>
    <string name="admintor">群主、管理员</string>
    <string name="advertisement">广告骚扰</string>
    <string name="agree">同意</string>
    <string name="agreement">《1元云购互助购物协议》</string>
    <string name="all_video">所有视频</string>
    <string name="allgoods_orderby_announce">即将揭晓</string>
    <string name="allgoods_orderby_newest">最新</string>
    <string name="allgoods_orderby_pop">人气</string>
    <string name="allgoods_orderby_price">价值</string>
    <string name="allow">通过</string>
    <string name="already_agree">已添加</string>
    <string name="already_apply">已申请</string>
    <string name="already_freeze">已冻结</string>
    <string name="already_send">已发货</string>
    <string name="already_stop_recorder">已停止录音</string>
    <string name="announce_already_join">您已参与%d人次</string>
    <string name="app_name">1元云购</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_thaw">申请解冻</string>
    <string name="ask_for_friend">请求添加为朋友</string>
    <string name="audio_msg_desc">[语音]</string>
    <string name="back">返回</string>
    <string name="back_to_homepage">返回首页</string>
    <string name="back_to_main">返回首页</string>
    <string name="backto_order_confirm">返回修改</string>
    <string name="bank_to_pay">网银支付</string>
    <string name="banlance_pay">余额支付</string>
    <string name="be_agree_add_friend">温馨提示 %1$s 已添加您为好友,可以开始聊天啦</string>
    <string name="be_friend">交个朋友呗</string>
    <string name="below_new_msg">以下为新消息</string>
    <string name="bind_account">绑定账号</string>
    <string name="bind_action_fails">绑定操作异常</string>
    <string name="bind_mobile">为了便于您及时收到通知信息，请立即绑定手机号</string>
    <string name="blacklist">黑名单</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_pay_share">分享好友求祝福</string>
    <string name="button_to_settle">结算(%s)</string>
    <string name="buy_num">人次</string>
    <string name="calculating">正在计算…</string>
    <string name="cancel">取消</string>
    <string name="cannot_post">此商品不可晒单</string>
    <string name="car_type_detail_title">汽车常见问题解答</string>
    <string name="cart">购物车</string>
    <string name="cart_goods_all_over">无可结算商品</string>
    <string name="cart_goods_is_over">啊哦，商品结束云购啦！</string>
    <string name="cart_goods_is_update">部分商品满员，是否更新参与最新一云？</string>
    <string name="cart_goods_is_update_all">全部商品满员，是否更新参与最新一云？</string>
    <string name="cart_goods_re_select">请重新选择您喜欢的商品吧！</string>
    <string name="cart_is_empty">主银，您的购物车还是空的哦~</string>
    <string name="change_fail">修改失败</string>
    <string name="change_friends">可能认识的人</string>
    <string name="change_recommend">换一换</string>
    <string name="change_success">修改成功</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat">私信</string>
    <string name="chat_msg_addownerface">添加到表情</string>
    <string name="chat_msg_copy">复制</string>
    <string name="chat_msg_delete">删除</string>
    <string name="chat_msg_forward">转发</string>
    <string name="chat_setting">聊天设置</string>
    <string name="check_more">查看</string>
    <string name="check_shopping_record">云购记录</string>
    <string name="chooce_shutup_time">选择禁言的时长</string>
    <string name="choose_a_group">选择一个群</string>
    <string name="choose_friend">选择好友</string>
    <string name="choose_groop">选择群</string>
    <string name="choose_pic">所有图片视频</string>
    <string name="classify_chose">分类选择</string>
    <string name="clean_all">清空</string>
    <string name="clear_finsh">清空完成</string>
    <string name="clear_msg">清空消息记录</string>
    <string name="clear_overd_goods">清空已结束商品</string>
    <string name="clear_record">清除历史记录</string>
    <string name="click_to_chat">点击发送私信</string>
    <string name="click_to_upload">点击上传</string>
    <string name="cloud_re_add">追加</string>
    <string name="cloud_record_detail">云购记录详情</string>
    <string name="cloud_record_share">分享好友求祝福</string>
    <string name="cloud_record_title">云购记录</string>
    <string name="collapse">收起</string>
    <string name="come_from">来自:%s</string>
    <string name="commission_not_enough_notice">您的佣金不足，赶快邀请好友赚佣金吧！</string>
    <string name="complete">完成</string>
    <string name="confirm">确定</string>
    <string name="confirm_apply_thow">确认申请解冻?</string>
    <string name="confirm_clear_record">确定清空聊天记录?</string>
    <string name="confirm_del_group">删除分组</string>
    <string name="confirm_del_group_tip">删除后将分组内好友移至默认分组</string>
    <string name="confirm_delete_friend">确定删除该好友？</string>
    <string name="confirm_deliver">确认收货</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="menu_invite_friends">邀请好友</string>
    <string name="menu_my_address">收货地址管理</string>
    <string name="menu_my_attention">我的关注</string>
    <string name="menu_my_post">我的晒单</string>
    <string name="menu_my_wallet">我的钱包</string>
    <string name="menu_obtain_goods">获得的商品</string>
    <string name="menu_setting">设置</string>
    <string name="menu_tel">客服电话 400-850-8080</string>
    <string name="my_address_set_default">设为默认</string>
    <string name="receipt_address_tips">请确保填写姓名为真实有效，否则将无法进行配送</string>
    <string name="tips_default">默认</string>
</resources>