<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="@dimen/padding_large" android:paddingRight="@dimen/padding_large" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/divider_vertical" android:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/layout_my_address" android:paddingTop="@dimen/padding_normal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="12321" android:textSize="@dimen/text_middle" android:textColor="@color/text_title" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/tv_my_address_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_normal" android:maxLines="1" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <TextView android:textSize="@dimen/text_small" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@+id/tv_my_address_default" android:background="@drawable/shape_btn_post_corner" android:paddingLeft="@dimen/padding_little" android:paddingRight="@dimen/padding_little" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_little" android:layout_marginTop="1.0dip" android:text="@string/tips_default" android:maxLines="1" android:layout_toRightOf="@id/tv_my_address_name" android:layout_alignTop="@id/tv_my_address_name" />
        <TextView android:text="12323" android:textSize="@dimen/text_middle" android:textColor="@color/text_title" android:ellipsize="end" android:gravity="right|center" android:id="@+id/tv_my_address_phone" android:paddingLeft="@dimen/padding_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:layout_alignTop="@id/tv_my_address_name" android:layout_alignParentRight="true" />
        <TextView android:text="12324" android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:gravity="center_vertical" android:id="@+id/tv_my_address_detail" android:paddingBottom="@dimen/padding_large" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_little" android:layout_below="@id/tv_my_address_name" android:layout_alignLeft="@id/tv_my_address_name" android:layout_alignRight="@id/tv_my_address_phone" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="38.0dip">
        <TextView android:textSize="@dimen/text_little" android:textColor="@color/text_gray" android:gravity="center" android:id="@+id/tv_my_address_check" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/my_address_set_default" android:drawableLeft="@drawable/check_box_agreement_nochecked" android:drawablePadding="@dimen/padding_normal" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/text_little" android:gravity="center" android:id="@+id/tv_my_address_delete" android:paddingLeft="@dimen/padding_little" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/delete" android:drawableLeft="@drawable/delete_my_address" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/text_little" android:gravity="center" android:id="@+id/tv_my_address_edit" android:paddingRight="@dimen/padding_little" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/edit" android:drawableLeft="@drawable/edit_my_address" android:layout_toLeftOf="@id/tv_my_address_delete" android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>
